package modelo;

public enum Disciplina {
    Atletismo, Natacion, Pesas, Ciclismo, Boxeo, Judo, Futbol, Basquetbol, Tenis
}
